--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellSpacing="20">
         <tr>
-            <td><img src="images/harshaedited1-modified.png" height="200px" width="200px"></td>
+            <td><img src="harshaedited1-modified.png" height="200px" width="200px"></td>
             <td>
                 <h1>Harsha varthan S R</h1>
                 <p><em>Student | Budding developer | I 💜 Coding</em></p>
